fix(navbar-brand): display on small width

--- a/styles/scss/partials/_navbar.scss
+++ b/styles/scss/partials/_navbar.scss
@@ -26,6 +26,11 @@
   padding: 0 .9rem;
   display: flex;
   align-items: center;
+  max-width: initial; /* to rewrite definition by bootstrap */
+
+  @media( max-width:991px){
+    flex-wrap: nowrap;
+  }
 }
 
 /* ----------------- */
@@ -121,12 +126,23 @@
     flex: 1;
     text-align: center
   }
-  #yw-topnav .navbar-header .navbar-brand { 
-    width: 100%; 
-    padding: 0 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  #yw-topnav {
+    .navbar-header .navbar-brand,
+    .container > .navbar-brand{ 
+      width: 100%; 
+      padding: 0 1rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      @media (max-width: 801px) {
+        & {
+          white-space: break-spaces;
+          line-height: 20px;
+          flex: 1;
+        }
+      }
+    }
+
   }
 
   #yw-topnav .btn .fa { font-size: 1.5rem !important; }
